tests/ui/badreserved.stderr
error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:10:6
   |
10 |     $[ future ]
   |      ^

error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:15:6
   |
15 |     $<ident:upper>
   |      ^

error: not allowed in within ${paste ...} (or case_changing)
  --> ui/badreserved.rs:16:18
   |
16 |     ${paste ident:upper}
   |                  ^

error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:21:6
   |
21 |     $r#"template content?"#
   |      ^^^^^^^^^^^^^^^^^^^^^^

error: inner attributes are reserved syntax, anywhere in derive-adhoc templates
  --> ui/badreserved.rs:28:9
   |
28 |         //! template doc comment?
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:35:6
   |
35 |     $/// template doc comment?
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `define_derive_adhoc`
 --> ui/badreserved.rs:3:20
  |
3 | use derive_adhoc::{define_derive_adhoc, derive_adhoc, Adhoc};
  |                    ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
